Implement KoFakeProgressProxy to avoid crashes when the user is not interested in progress reporting

BUG:391368
(cherry picked from commit a7f3a67fed20101d5eefe2631480dd77b459f0e3)